# telebot

./: .gitignore  Dockerfile  bot.py  config.py  db.py  docker-compose.yml  farms.py  handlers.py  hello.py  init_db.sql  pyproject.toml  requirements.txt
